<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            style="@style/Widget.AppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/spacing_normal"
                    android:src="@drawable/ic_arrow_back_blue_24_px"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="?actionBarSize"
                    android:text="@string/login_authorization"
                    android:gravity="center_vertical"
                    android:padding="@dimen/spacing_medium"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:textAppearance="@style/TextAppearance.Homework.ToolbarTitle"/>

            <TextView
                    android:id="@+id/tv_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textAllCaps="true"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:gravity="end"
                    android:text="@string/login_create"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/blue"/>

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <View android:layout_width="match_parent"
          android:layout_height="4dp"
          android:background="@drawable/shadow_bottom"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_extra_large"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="@dimen/spacing_extra_large"
            android:hint="@string/login_email"
            android:textColorHint="@color/hint"
            app:hintAnimationEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:focusable="true"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/greyish_brown"
                android:textSize="@dimen/text_size_medium"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_extra_large"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_extra_large"
            android:hint="@string/login_password"
            android:textColorHint="@color/hint"
            app:hintAnimationEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:focusable="true"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/greyish_brown"
                android:textSize="@dimen/text_size_medium"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/btn_login"
            style="@style/Widget.Login.Button"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="@dimen/spacing_extra_large"
            android:layout_marginEnd="@dimen/spacing_extra_large"
            android:layout_marginStart="@dimen/spacing_extra_large"
            android:text="@string/login_sign_in"
            android:textColor="@color/white"/>

</LinearLayout>